data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_566.wast
;; 7. **Test Name: Infinite Loop with Local Variable Mutation**    - **Description**: Write a loop where a local variable changes values, but a faulty `br_if` condition dependent on this variable loops infinitely.    - **Constraint Checked**: Ensuring `br_if` conditions react correctly to local variable changes.    - **Infinite Loop Relation**: Faulty condition always results in backward branching.

(assert_invalid
  (module
    (func $infinite-loop-with-local-variable (local i32)
      (local.set 0 (i32.const 0))
      (loop (result i32)
        (local.set 0 (i32.add (local.get 0) (i32.const 1)))
        (br_if 0 (i32.eq (local.get 0) (i32.const 0)))
      )
    )
  )
  "type mismatch"
)